# guild-manager-bot

./: .gitignore  Makefile  README.md  launcher.py  pyproject.toml  requirements.txt
engine/: bot.py  config.py  content_moderator.py  launcher.py  messages.py  nsfw_checker.py  run.py  utils.py  views.py
engine/cogs/: band_manager.py  banner_task.py  commands_only.py  image_moderator.py  publisher.py  role_manager.py  solo_manager.py  talk.py  thread_manager.py
settings/: authorized_bands.json
