[tool.poetry]
name = "image-thread-manager"
version = "0.1.0"
description = ""
authors = ["Iris-Raine <iris.raine.darkest.star@gmail.com>"]
readme = "README.md"
packages = [{include = "image_thread_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.5.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
